--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta property="og:url" content="https://game-players-online.vercel.app/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Carrom Pool ">
+<meta property="og:description" content="Play online with friends">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/6b899d6a-37ae-4df0-ba49-67c1d079d56a.jpg?token=3MtR3Bm7e71Am3inej5zFEbI09V7bn4-UXFmD46ZJA8&height=730&width=1080&expires=33296640391">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrom Pool - Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
