--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta property="og:url" content="https://game-players-online.vercel.app/">
+ <!-- HTML Meta Tags -->
+<title>Carrom Pool </title>
+<meta name="description" content="come play carrom pool with me?">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://game-players-online.vercel.app">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Carrom Pool ">
-<meta property="og:description" content="Play online with friends">
-<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/6b899d6a-37ae-4df0-ba49-67c1d079d56a.jpg?token=3MtR3Bm7e71Am3inej5zFEbI09V7bn4-UXFmD46ZJA8&height=730&width=1080&expires=33296640391">
+<meta property="og:description" content="come play carrom pool with me?">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/6b899d6a-37ae-4df0-ba49-67c1d079d56a.jpg?token=2a3D3GHH4-MKuYJjSm2bWyrnb5XWKIYCvdWnDiAxm4Q&height=730&width=1080&expires=33296641375">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="game-players-online.vercel.app">
+<meta property="twitter:url" content="https://game-players-online.vercel.app">
+<meta name="twitter:title" content="Carrom Pool ">
+<meta name="twitter:description" content="come play carrom pool with me?">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/6b899d6a-37ae-4df0-ba49-67c1d079d56a.jpg?token=2a3D3GHH4-MKuYJjSm2bWyrnb5XWKIYCvdWnDiAxm4Q&height=730&width=1080&expires=33296641375">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carrom Pool - Login</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
