--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Carrom Pool - Login</title>
+  <title>Carrom Pool</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
