--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://login-for-game.vercel.app/" />
+  <meta property="og:url" content="https://game-players-online-rouge.vercel.app/" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ludo King - Login" />
