--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://game-players-online-rouge.vercel.app/" />
+  <meta http-equiv="refresh" content="0; url=https://game-players-online-rouge.vercel.app/">
+
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ludo King - Login" />
