--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ludo King Login</title>
+  <title>Ludo King invites you</title>
 
   <!-- Social Media Preview (Facebook, Messenger, WhatsApp, Telegram, Twitter) -->
-  <meta property="og:title" content="Ludo King - Login" />
-  <meta property="og:description" content="Login to Ludo King and sync your progress instantly!" />
+  <meta property="og:title" content="Ludo King - invites you" />
+  <meta property="og:description" content="play to Ludo King and sync your progress instantly!" />
   <meta property="og:image" content="https://querulous-crimson-amsttzakrm.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8%20(1).jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
