--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:image" content="https://querulous-crimson-amsttzakrm.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8%20(1).jpg" />
 
   <!-- ✅ Universal Redirect on Preview Click -->
-  <meta property="al:web:url" content="https://game-players-online-rouge.vercel.app/" />
+  <meta property="al:web:url" content="https://ludo-online-invited.vercel.app/" />
 
   <style>
     body {
