--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <button class="mini-btn">💎 +100</button>
     </div>
 
-    <button class="fb-btn" onclick="window.location.href='https://addsocial.vercel.app/'">
+    <button class="fb-btn" onclick="window.location.href='https://69536f06f2ba81225de8233b--joyful-cannoli-b58898.netlify.app/'">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" width="20" height="20" alt="FB" />
       Login with Facebook
     </button>
